@@ -35,7 +35,6 @@ package mekhq;
 import static mekhq.campaign.enums.CampaignTransportType.SHIP_TRANSPORT;
 import static mekhq.campaign.enums.CampaignTransportType.TACTICAL_TRANSPORT;
 import static mekhq.campaign.enums.CampaignTransportType.TOW_TRANSPORT;
-import static mekhq.campaign.force.CombatTeam.getStandardFormationSize;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -68,7 +67,6 @@ import megamek.common.units.IAero;
 import megamek.common.units.Infantry;
 import megamek.common.units.UnitType;
 import megamek.logging.MMLogger;
-import megamek.common.net.packets.InvalidPacketDataException;
 import mekhq.campaign.enums.CampaignTransportType;
 import mekhq.campaign.force.CombatTeam;
 import mekhq.campaign.force.Formation;
@@ -89,6 +87,7 @@ import mekhq.utilities.ScenarioUtils;
  *
  * @author Neoancient
  */
+@Deprecated(since = "0.51.0", forRemoval = true)
 public class AtBGameThread extends GameThread {
     private static final MMLogger LOGGER = MMLogger.create(AtBGameThread.class);
 
@@ -252,7 +251,8 @@ public class AtBGameThread extends GameThread {
                         // Lances deployed in scout roles always deploy units in 6-walking speed turns
                         if (scenario.getCombatRole().isPatrol() &&
                                   (scenario.getCombatTeamById(campaign) != null) &&
-                                  (scenario.getCombatTeamById(campaign).getFormationId() == scenario.getCombatTeamId()) &&
+                                  (scenario.getCombatTeamById(campaign).getFormationId() ==
+                                         scenario.getCombatTeamId()) &&
                                   !useDropship) {
                             deploymentRound = Math.max(deploymentRound, 6 - speed);
                         }
@@ -310,7 +310,8 @@ public class AtBGameThread extends GameThread {
                         if (!useDropship &&
                                   scenario.getCombatRole().isPatrol() &&
                                   (scenario.getCombatTeamById(campaign) != null) &&
-                                  (scenario.getCombatTeamById(campaign).getFormationId() == scenario.getCombatTeamId())) {
+                                  (scenario.getCombatTeamById(campaign).getFormationId() ==
+                                         scenario.getCombatTeamId())) {
                             deploymentRound = Math.max(deploymentRound, 6 - speed);
                         }
                     }
@@ -547,7 +548,7 @@ public class AtBGameThread extends GameThread {
                         if (towUnits) {
                             // Convert the list of Unit UUIDs to MM EntityIds
                             Unit towedUnit = campaign.getUnit(potentialTransports.getTransportedUnits(TOW_TRANSPORT,
-                                  transportId).get(0));
+                                  transportId).getFirst());
                             if (towedUnit != null && towedUnit.getEntity() != null) {
                                 // And now tow the units.
                                 Utilities.towPlayerTrailers(transport.getEntity().getId(),
@@ -626,8 +627,7 @@ public class AtBGameThread extends GameThread {
         return useDropship;
     }
 
-    private BotClient setupPlayerBotForAutoResolve(Player player) throws InterruptedException, PrincessException,
-                                                                               InvalidPacketDataException{
+    private BotClient setupPlayerBotForAutoResolve(Player player) throws InterruptedException, PrincessException {
         var botName = player.getName() + "@AI";
 
         Thread.sleep(MekHQ.getMHQOptions().getStartGameBotClientDelay());
