@@ -232,7 +232,35 @@ public class ResolveScenarioTracker {
         } else {
             initUnitsAndPilotsWithoutBattle();
         }
+
+        recoverUnfoundDeployedUnits();
+
         checkStatusOfPersonnel();
+    }
+
+    /**
+     * Recovers units that were deployed by MekHQ but never appeared in the game/MUL results. This can happen when the
+     * MegaMek server rejects a unit (e.g., flagged as an illegal design). Such units should not be treated as total
+     * losses — they are returned to the campaign unharmed, and their crews are tracked as alive.
+     *
+     * @see <a href="https://github.com/MegaMek/mekhq/issues/6606">GitHub issue #6606</a>
+     */
+    private void recoverUnfoundDeployedUnits() {
+        for (Unit u : units) {
+            UUID uid = u.getId();
+            UnitStatus status = unitsStatus.get(uid);
+            if (status != null && status.isTotalLoss() && !entities.containsKey(uid)) {
+                status.assignFoundEntity(u.getEntity(), false);
+                logger.warn("Unit {} ({}) was deployed but never appeared in results. "
+                                  + "It may have been rejected by the server. Returning it to the campaign.",
+                      u.getName(), uid);
+
+                Crew crew = u.getEntity().getCrew();
+                if (crew != null && !"-1".equals(crew.getExternalIdAsString())) {
+                    pilots.put(UUID.fromString(crew.getExternalIdAsString()), crew);
+                }
+            }
+        }
     }
 
     private TestUnit generateNewTestUnit(Entity e) {
@@ -365,6 +393,18 @@ public class ResolveScenarioTracker {
                         status.assignFoundEntity(entity, true);
                     }
                 }
+            } else if (entity.getOwner().isEnemyOf(client.getLocalPlayer())) {
+                if (entity instanceof EjectedCrew) {
+                    enemyEjections.put(UUID.fromString(entity.getCrew().getExternalIdAsString()),
+                          (EjectedCrew) entity);
+                } else {
+                    // Completely destroyed units (such as from an ammo explosion) need to be
+                    // kept track of, as their crew may still be capturable
+                    TestUnit nu = generateNewTestUnit(entity);
+                    UnitStatus us = new UnitStatus(nu);
+                    salvageStatus.put(nu.getId(), us);
+                    devastatedEnemyUnits.add(nu);
+                }
             }
 
             appendKillCredit(entity);
@@ -495,6 +535,9 @@ public class ResolveScenarioTracker {
                 bayLoadedEntities.put(trnId, cargo);
             }
         }
+
+        recoverUnfoundDeployedUnits();
+
         checkStatusOfPersonnel();
     }
 
@@ -850,14 +893,14 @@ public class ResolveScenarioTracker {
     }
 
     /**
-     * Attempts to assign a casualty to temp crew members (blob crew) if any exist.
-     * Casualties are randomly distributed across all temp crew types proportional to their numbers.
-     * If no blob crew exists or the random roll indicates a Person should be hit, the casualty
-     * is assigned to the Person instead (setting dead or wounded status). This can be expanded in the
-     * future to include support for wounding temp crew.
+     * Attempts to assign a casualty to temp crew members (blob crew) if any exist. Casualties are randomly distributed
+     * across all temp crew types proportional to their numbers. If no blob crew exists or the random roll indicates a
+     * Person should be hit, the casualty is assigned to the Person instead (setting dead or wounded status). This can
+     * be expanded in the future to include support for wounding temp crew.
      *
-     * @param unit The unit with potential temp crew
+     * @param unit   The unit with potential temp crew
      * @param status The personnel status object to update if casualty assigned to a Person
+     *
      * @return The type of casualty assignment that occurred
      */
     private CasualtyAssignment assignTempCrewCasualty(Unit unit, PersonStatus status) {
@@ -1187,7 +1230,7 @@ public class ResolveScenarioTracker {
             }
 
             if ((commander == null) && !crew.isEmpty()) {
-                commander = crew.get(0);
+                commander = crew.getFirst();
             }
 
             int casualties = 0;
@@ -1568,6 +1611,7 @@ public class ResolveScenarioTracker {
         }
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public List<TestUnit> getAlliedUnits() {
         return alliedUnits;
     }
@@ -1612,10 +1656,12 @@ public class ResolveScenarioTracker {
         }
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public void setContractBreaches(int i) {
         contractBreaches = i;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public void setBonusRolls(int i) {
         bonusRolls = i;
     }
@@ -1637,9 +1683,8 @@ public class ResolveScenarioTracker {
     }
 
     /**
-     * Processes death payouts for killed temp crew (blob crew).
-     * Calculates appropriate compensation based on role base salaries and
-     * campaign payout settings.
+     * Processes death payouts for killed temp crew (blob crew). Calculates appropriate compensation based on role base
+     * salaries and campaign payout settings.
      */
     private void processTempCrewDeathPayouts() {
         CampaignOptions options = campaign.getCampaignOptions();
@@ -1662,28 +1707,29 @@ public class ResolveScenarioTracker {
         // Debit the total payout from campaign finances
         if (totalPayout.isPositive()) {
             campaign.getFinances().debit(
-                TransactionType.SALARIES,
-                campaign.getLocalDate(),
-                totalPayout,
-                getTextAt(RESOURCE_BUNDLE, "tempCrewDeathBenefitsTransaction")
+                  TransactionType.SALARIES,
+                  campaign.getLocalDate(),
+                  totalPayout,
+                  getTextAt(RESOURCE_BUNDLE, "ResolveScenarioTracker.tempCrewDeathBenefitsTransaction")
             );
 
             // Add a report entry
             campaign.addReport(
-                mekhq.campaign.enums.DailyReportType.PERSONNEL,
-                getFormattedTextAt(RESOURCE_BUNDLE, "tempCrewDeathBenefitsReport",
-                    totalPayout.toAmountAndSymbolString(),
-                    totalKilled)
+                  mekhq.campaign.enums.DailyReportType.PERSONNEL,
+                  getFormattedTextAt(RESOURCE_BUNDLE, "ResolveScenarioTracker.tempCrewDeathBenefitsReport",
+                        totalPayout.toAmountAndSymbolString(),
+                        totalKilled)
             );
         }
     }
 
     /**
-     * Calculates the payout amount for a temp crew member based on base salary.
-     * Uses the same multipliers as regular personnel death benefits.
+     * Calculates the payout amount for a temp crew member based on base salary. Uses the same multipliers as regular
+     * personnel death benefits.
      *
      * @param baseSalary The base salary for the role
-     * @param isOfficer Whether the crew member is an officer (always false for temp crew)
+     * @param isOfficer  Whether the crew member is an officer (always false for temp crew)
+     *
      * @return The calculated payout amount
      */
     private Money calculateTempCrewPayout(Money baseSalary, boolean isOfficer) {
@@ -1713,16 +1759,12 @@ public class ResolveScenarioTracker {
         // let's start by generating a stub file for our records
         scenario.generateStub(campaign);
 
-        // and create trackers for ransomed prisoners and units
-        Money unitRansoms = Money.zero();
-
         // ok lets do the whole enchilada and go ahead and update campaign
         // first figure out if we need any battle loss comp
         double blc = 0;
         final Mission mission = getMission();
 
         final boolean isContract = mission instanceof Contract;
-        final boolean isAtBContract = mission instanceof AtBContract;
         if (isContract) {
             blc = ((Contract) mission).getBattleLossComp() / 100.0;
         }
@@ -1960,6 +2002,7 @@ public class ResolveScenarioTracker {
         client = null;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public ArrayList<Person> getMissingPersonnel() {
         ArrayList<Person> mia = new ArrayList<>();
         for (UUID pid : peopleStatus.keySet()) {
@@ -1974,6 +2017,7 @@ public class ResolveScenarioTracker {
         return mia;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public ArrayList<Person> getDeadPersonnel() {
         ArrayList<Person> kia = new ArrayList<>();
         for (UUID pid : peopleStatus.keySet()) {
@@ -1988,6 +2032,7 @@ public class ResolveScenarioTracker {
         return kia;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public ArrayList<Person> getRecoveredPersonnel() {
         ArrayList<Person> recovered = new ArrayList<>();
         for (UUID pid : peopleStatus.keySet()) {
@@ -2312,6 +2357,7 @@ public class ResolveScenarioTracker {
             return baseEntity;
         }
 
+        @Deprecated(since = "0.51.0", forRemoval = true)
         public void setBaseEntity(Entity baseEntity) {
             this.baseEntity = baseEntity;
         }
