@@ -68,8 +68,8 @@ public class TankLocation extends Part {
     public static final TechAdvancement TECH_ADVANCEMENT = new TechAdvancement(TechBase.ALL)
                                                                  .setAdvancement(2460, 2470, 2510)
                                                                  .setApproximate(true, false, false)
-                                                                 .setPrototypeFactions(Faction.TH)
-                                                                 .setProductionFactions(Faction.TH)
+                                                                 .setPrototypeFactions(Faction.TH, Faction.CS)
+                                                                 .setProductionFactions(Faction.TH, Faction.CS)
                                                                  .setTechRating(TechRating.D)
                                                                  .setAvailability(AvailabilityValue.A,
                                                                        AvailabilityValue.A,
@@ -231,7 +231,7 @@ public class TankLocation extends Part {
             } else {
                 int originalInternal = unit.getEntity().getOInternal(loc);
                 int internal = unit.getEntity().getInternal(loc);
-                damage = originalInternal - Math.min(originalInternal, Math.max(internal, 0));
+                damage = originalInternal - Math.clamp(internal, 0, originalInternal);
                 if (unit.isLocationBreached(loc)) {
                     breached = true;
                 }
