@@ -54,6 +54,7 @@ import javax.swing.RowSorter.SortKey;
 import javax.swing.table.TableColumn;
 import javax.swing.table.TableRowSorter;
 
+import megamek.common.ui.FastJScrollPane;
 import megamek.logging.MMLogger;
 import mekhq.MekHQ;
 import mekhq.campaign.Campaign;
@@ -63,7 +64,6 @@ import mekhq.gui.CampaignGUI;
 import mekhq.gui.enums.PersonnelFilter;
 import mekhq.gui.model.AutoAwardsTableModel;
 import mekhq.gui.sorter.PersonRankStringSorter;
-import mekhq.gui.utilities.JScrollPaneWithSpeed;
 
 public class AutoAwardsDialog extends JDialog {
     private static final MMLogger logger = MMLogger.create(AutoAwardsDialog.class);
@@ -192,7 +192,7 @@ public class AutoAwardsDialog extends JDialog {
         JCheckBox cbxAward = (JCheckBox) cellEditor.getComponent();
         cbxAward.addMouseListener(checkboxListener);
 
-        JScrollPane scrollPane = new JScrollPaneWithSpeed();
+        JScrollPane scrollPane = new FastJScrollPane();
         scrollPane.setViewportView(personnelTable);
         scrollPane.setPreferredSize(new Dimension(500, 500));
         autoAwardsPanel.add(scrollPane, BorderLayout.CENTER);
@@ -256,7 +256,7 @@ public class AutoAwardsDialog extends JDialog {
             if (event.getSource().equals(btnDone)) {
                 for (int rowIndex = 0; rowIndex < personnelTable.getRowCount(); rowIndex++) {
                     if ((boolean) personnelTable.getValueAt(rowIndex, 3)) {
-                        Person person = campaign.getPerson((UUID) data.get(rowIndex).get(0));
+                        Person person = campaign.getPerson((UUID) data.get(rowIndex).getFirst());
                         Award award = (Award) data.get(rowIndex).get(1);
 
                         List<Award> awardsForRemoval = new ArrayList<>();
