@@ -217,7 +217,7 @@ public class RetirementTableModel extends AbstractTableModel {
                 // check for tech
                 if (!person.getTechUnits().isEmpty()) {
                     if (person.getTechUnits().size() == 1) {
-                        u = person.getTechUnits().get(0);
+                        u = person.getTechUnits().getFirst();
                         if (null != u) {
                             return u.getName() + " (" + person.getMaintenanceTimeUsing() + "m)";
                         }
@@ -414,7 +414,7 @@ public class RetirementTableModel extends AbstractTableModel {
             } else if (actualCol == COL_ASSIGN) {
                 Unit u = p.getUnit();
                 if (!p.getTechUnits().isEmpty()) {
-                    u = p.getTechUnits().get(0);
+                    u = p.getTechUnits().getFirst();
                 }
 
                 if (null != u) {
