@@ -75,10 +75,10 @@ class C3NetworkTest {
     /**
      * Creates a mock Unit with a mock Entity configured for C3i network testing.
      *
-     * @param hasC3i    whether the entity has C3i
-     * @param freeNodes number of free C3 nodes (5 = unnetworked, < 5 = networked)
-     * @param networkId the C3 network ID
-     * @param formationId   the formation ID (-1 = not in TO&E)
+     * @param hasC3i      whether the entity has C3i
+     * @param freeNodes   number of free C3 nodes (5 = unnetworked, < 5 = networked)
+     * @param networkId   the C3 network ID
+     * @param formationId the formation ID (-1 = not in TO&E)
      *
      * @return configured mock Unit
      */
@@ -119,7 +119,7 @@ class C3NetworkTest {
      * @param hasNovaCEWS whether the entity has Nova CEWS
      * @param freeNodes   number of free nodes (2 = unnetworked, < 2 = networked for Nova)
      * @param networkId   the network ID
-     * @param formationId     the formation ID (-1 = not in TO&E)
+     * @param formationId the formation ID (-1 = not in TO&E)
      *
      * @return configured mock Unit
      */
@@ -153,8 +153,8 @@ class C3NetworkTest {
 
             // Assert - should find the network with 5 free nodes
             assertEquals(1, networks.size(), "Should find one available C3i network");
-            assertEquals("C3i.TestNetwork", networks.get(0)[0]);
-            assertEquals("5", networks.get(0)[1]);
+            assertEquals("C3i.TestNetwork", networks.getFirst()[0]);
+            assertEquals("5", networks.getFirst()[1]);
         }
 
         @Test
@@ -169,7 +169,7 @@ class C3NetworkTest {
 
             // Assert
             assertEquals(1, networks.size());
-            assertEquals("3", networks.get(0)[1]);
+            assertEquals("3", networks.getFirst()[1]);
         }
 
         @Test
@@ -247,7 +247,7 @@ class C3NetworkTest {
 
             // Assert
             assertEquals(1, networks.size(), "Should find one available NC3 network");
-            assertEquals("5", networks.get(0)[1]);
+            assertEquals("5", networks.getFirst()[1]);
         }
 
         @Test
@@ -281,8 +281,8 @@ class C3NetworkTest {
 
             // Assert
             assertEquals(1, networks.size(), "Should find one available Nova CEWS network");
-            assertEquals("C3Nova.TestNetwork", networks.get(0)[0]);
-            assertEquals("2", networks.get(0)[1]);
+            assertEquals("C3Nova.TestNetwork", networks.getFirst()[0]);
+            assertEquals("2", networks.getFirst()[1]);
         }
 
         @Test
@@ -297,7 +297,7 @@ class C3NetworkTest {
 
             // Assert
             assertEquals(1, networks.size());
-            assertEquals("1", networks.get(0)[1]);
+            assertEquals("1", networks.getFirst()[1]);
         }
 
         @Test
